--- a/Regresión/Regresion_Lineal.ipynb
+++ b/Regresión/Regresion_Lineal.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPiyhJC+p7ikLg41ESFTCND",
+      "authorship_tag": "ABX9TyMUg+LI6woRmaS3yn54SPv/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,14 +25,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-J3qDXeFwvSb",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Regresión lineal simple"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "rvsqdsNTvsP9",
+        "id": "Vsqlhqgww1BG",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "XX"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
