--- a/Regresión/Regresion_Lineal.ipynb
+++ b/Regresión/Regresion_Lineal.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMUg+LI6woRmaS3yn54SPv/",
+      "toc_visible": true,
+      "mount_file_id": "https://github.com/ClauCll/Curso_ML_A_Z/blob/master/Regresi%C3%B3n/Regresion_Lineal.ipynb",
+      "authorship_tag": "ABX9TyMjLaOry61ZYyodcoBaLU9Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +44,367 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import gspread\n",
+        "from oauth2client.client import GoogleCredentials \n",
+        "from google.colab import auth\n",
+        "# Autoriza Claudia\n",
+        "auth.authenticate_user()\n",
+        "gc = gspread.authorize (GoogleCredentials.get_application_default())"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8beytxHf0rG_",
+        "colab_type": "text"
+      },
+      "source": [
+        "### serv alojado en drive:\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0dR3nklLzG_W",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "85bac8a8-40ea-40da-fc57-97cbc9cc8377"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zX1T89Erz68h",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "61cf0f32-1aae-4eda-cdad-184df132c2ca"
+      },
+      "source": [
+        "ls"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "'Salary_Data (1).gsheet'   Salary_Data.csv   Salary_Data.gsheet\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zGD8uLyxzmOv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "7f1a3978-aed8-4298-f526-5f3f7fbbcb99"
+      },
+      "source": [
+        "cd Dataset/"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/My Drive/Dataset\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2xAoqlB_02Do",
+        "colab_type": "text"
+      },
+      "source": [
+        "### leemos datos"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0JYqth2Ty8-k",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 984
+        },
+        "outputId": "7d7e4868-e72c-4974-cab0-78765d744486"
+      },
+      "source": [
+        "pd.read_csv('Salary_Data.csv',delimiter=';')"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>YearsExperience</th>\n",
+              "      <th>Salary</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1.1</td>\n",
+              "      <td>39343.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1.3</td>\n",
+              "      <td>46205.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1.5</td>\n",
+              "      <td>37731.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2.0</td>\n",
+              "      <td>43525.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2.2</td>\n",
+              "      <td>39891.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>2.9</td>\n",
+              "      <td>56642.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>3.0</td>\n",
+              "      <td>60150.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>3.2</td>\n",
+              "      <td>54445.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>3.2</td>\n",
+              "      <td>64445.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>3.7</td>\n",
+              "      <td>57189.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>3.9</td>\n",
+              "      <td>63218.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>4.0</td>\n",
+              "      <td>55794.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>4.0</td>\n",
+              "      <td>56957.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>4.1</td>\n",
+              "      <td>57081.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>4.5</td>\n",
+              "      <td>61111.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>4.9</td>\n",
+              "      <td>67938.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>5.1</td>\n",
+              "      <td>66029.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>5.3</td>\n",
+              "      <td>83088.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18</th>\n",
+              "      <td>5.9</td>\n",
+              "      <td>81363.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19</th>\n",
+              "      <td>6.0</td>\n",
+              "      <td>93940.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>20</th>\n",
+              "      <td>6.8</td>\n",
+              "      <td>91738.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>21</th>\n",
+              "      <td>7.1</td>\n",
+              "      <td>98273.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>22</th>\n",
+              "      <td>7.9</td>\n",
+              "      <td>101302.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>23</th>\n",
+              "      <td>8.2</td>\n",
+              "      <td>113812.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>24</th>\n",
+              "      <td>8.7</td>\n",
+              "      <td>109431.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25</th>\n",
+              "      <td>9.0</td>\n",
+              "      <td>105582.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>26</th>\n",
+              "      <td>9.5</td>\n",
+              "      <td>116969.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>27</th>\n",
+              "      <td>9.6</td>\n",
+              "      <td>112635.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>28</th>\n",
+              "      <td>10.3</td>\n",
+              "      <td>122391.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>29</th>\n",
+              "      <td>10.5</td>\n",
+              "      <td>121872.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    YearsExperience    Salary\n",
+              "0               1.1   39343.0\n",
+              "1               1.3   46205.0\n",
+              "2               1.5   37731.0\n",
+              "3               2.0   43525.0\n",
+              "4               2.2   39891.0\n",
+              "5               2.9   56642.0\n",
+              "6               3.0   60150.0\n",
+              "7               3.2   54445.0\n",
+              "8               3.2   64445.0\n",
+              "9               3.7   57189.0\n",
+              "10              3.9   63218.0\n",
+              "11              4.0   55794.0\n",
+              "12              4.0   56957.0\n",
+              "13              4.1   57081.0\n",
+              "14              4.5   61111.0\n",
+              "15              4.9   67938.0\n",
+              "16              5.1   66029.0\n",
+              "17              5.3   83088.0\n",
+              "18              5.9   81363.0\n",
+              "19              6.0   93940.0\n",
+              "20              6.8   91738.0\n",
+              "21              7.1   98273.0\n",
+              "22              7.9  101302.0\n",
+              "23              8.2  113812.0\n",
+              "24              8.7  109431.0\n",
+              "25              9.0  105582.0\n",
+              "26              9.5  116969.0\n",
+              "27              9.6  112635.0\n",
+              "28             10.3  122391.0\n",
+              "29             10.5  121872.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-6x-g7z2pxPJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Dataset\n",
+        "data = gc.open('Salary_Data.csv',delimiter =';')\n",
+        "sheet = data.worksheet('Salary_Data')\n",
+        "rows = sheet.get_all_values()\n",
+        "dt = pd.DataFrame.from_records(rows)\n",
+        "dt"
       ],
       "execution_count": 0,
       "outputs": []
