--- a/Regresión/Regresion_Lineal.ipynb
+++ b/Regresión/Regresion_Lineal.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMtX3iCvSwH2EKiDVkG2Yrp",
+      "authorship_tag": "ABX9TyPiF8bQZI5TSSyZ1RreiivQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,7 +129,14 @@
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
-        "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=1/3, random_state=0)\n"
+        "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=1/3, random_state=0)\n",
+        "\n",
+        "# Escalado de variables\n",
+        "# en este ejemplo no es necesario lo dejaremos comentariado\n",
+        "#from sklearn.preprocessing import StandardScaler\n",
+        "#sc_x = StandardScaler()\n",
+        "#x_train = sc_x.fit.transform(x_train)\n",
+        "#x_test = sc_x.fit.transform(x_test)"
       ],
       "execution_count": 0,
       "outputs": []
