--- a/Regresión/Regresion_Lineal.ipynb
+++ b/Regresión/Regresion_Lineal.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPiF8bQZI5TSSyZ1RreiivQ",
+      "authorship_tag": "ABX9TyNkq+5Sd0xvriJZsjR9gZyA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,17 +70,17 @@
       "metadata": {
         "id": "y_VVpj56uzRV",
         "colab_type": "code",
+        "outputId": "f408b8d1-634e-47e9-b5ec-14fb99949841",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
-        },
-        "outputId": "ffe000f9-9cc7-4a97-dbd9-4185813d50ea"
+        }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,110 +142,24 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "6PcIkmbTwQk5",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 359
-        },
-        "outputId": "3e3a1047-5d87-4e0c-dc28-00d859f65a78"
+        "id": "ica7hyF52HbD",
+        "colab_type": "text"
       },
       "source": [
-        "x_test"
-      ],
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>YearsExperience</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>1.5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>28</th>\n",
-              "      <td>10.3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>13</th>\n",
-              "      <td>4.1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>3.9</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>26</th>\n",
-              "      <td>9.5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>24</th>\n",
-              "      <td>8.7</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>27</th>\n",
-              "      <td>9.6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>4.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>17</th>\n",
-              "      <td>5.3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>22</th>\n",
-              "      <td>7.9</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "    YearsExperience\n",
-              "2               1.5\n",
-              "28             10.3\n",
-              "13              4.1\n",
-              "10              3.9\n",
-              "26              9.5\n",
-              "24              8.7\n",
-              "27              9.6\n",
-              "11              4.0\n",
-              "17              5.3\n",
-              "22              7.9"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 23
-        }
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vBnbyngq2LfA",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Modelo de regresión lineal simple. \n",
+        "### método minimos cuadrados"
       ]
     },
     {
@@ -253,38 +167,30 @@
       "metadata": {
         "id": "ILktg1Ld8Yuk",
         "colab_type": "code",
+        "outputId": "cfa1f217-ecde-4442-a978-a4c2a311654d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "6c820bfb-c054-4bfa-d584-538f72c0aa48"
+          "height": 34
+        }
       },
       "source": [
-        "y_test"
+        "from sklearn.linear_model import LinearRegression\n",
+        "regresion = LinearRegression()\n",
+        "regresion.fit(x_train,y_train)"
       ],
-      "execution_count": 25,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "2      37731.0\n",
-              "28    122391.0\n",
-              "13     57081.0\n",
-              "10     63218.0\n",
-              "26    116969.0\n",
-              "24    109431.0\n",
-              "27    112635.0\n",
-              "11     55794.0\n",
-              "17     83088.0\n",
-              "22    101302.0\n",
-              "Name: Salary, dtype: float64"
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 10
         }
       ]
     }
