--- a/Regresión/Regresion_Lineal.ipynb
+++ b/Regresión/Regresion_Lineal.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNqFd4tALwM4xLWlK9yPbYY",
+      "authorship_tag": "ABX9TyNAwv/SgiKmFH6OWwhYH9YA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -246,17 +246,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "0603cde9-5677-4220-8e65-bfd6aa931431"
+        "outputId": "85c78753-0ff4-41c9-fccd-434d5156f7a4"
       },
       "source": [
         "plt.scatter(x_train, y_train, color=\"red\")\n",
+        "#plt.scatter(x_test , y_test , color=\"green\")\n",
         "plt.plot(x_train, regresion.predict(x_train), color=\"blue\")\n",
         "plt.title(\"Sueldo vs años de experiencia - Conjunto de entrenamiento\")\n",
         "plt.xlabel (\"Años de experiencia\")\n",
         "plt.ylabel (\"Sueldo $\")\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "display_data",
