--- a/Regresión/Regresion_Lineal_Multiple.ipynb
+++ b/Regresión/Regresion_Lineal_Multiple.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMrad4Ins9QWOwb9oRJyER4",
+      "authorship_tag": "ABX9TyPSTkknVEkUPJM6ANTtp3bg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,6 +145,121 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZdEU6QjhhMTi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Iu0L66hshOUr",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Evitar la trampa de las variables Dummy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6ZwQJF0Ahba0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = x[:,1:]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hKuAP2yZhzaC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 867
+        },
+        "outputId": "49c9dd73-1c36-4555-bb21-ce5e9ea6cd23"
+      },
+      "source": [
+        "x"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[     0,      1, 165349, 136897, 471784],\n",
+              "       [     0,      0, 162597, 151377, 443898],\n",
+              "       [     1,      0, 153441, 101145, 407934],\n",
+              "       [     0,      1, 144372, 118671, 383199],\n",
+              "       [     1,      0, 142107,  91391, 366168],\n",
+              "       [     0,      1, 131876,  99814, 362861],\n",
+              "       [     0,      0, 134615, 147198, 127716],\n",
+              "       [     1,      0, 130298, 145530, 323876],\n",
+              "       [     0,      1, 120542, 148718, 311613],\n",
+              "       [     0,      0, 123334, 108679, 304981],\n",
+              "       [     1,      0, 101913, 110594, 229160],\n",
+              "       [     0,      0, 100671,  91790, 249744],\n",
+              "       [     1,      0,  93863, 127320, 249839],\n",
+              "       [     0,      0,  91992, 135495, 252664],\n",
+              "       [     1,      0, 119943, 156547, 256512],\n",
+              "       [     0,      1, 114523, 122616, 261776],\n",
+              "       [     0,      0,  78013, 121597, 264346],\n",
+              "       [     0,      1,  94657, 145077, 282574],\n",
+              "       [     1,      0,  91749, 114175, 294919],\n",
+              "       [     0,      1,  86419, 153514,      0],\n",
+              "       [     0,      0,  76253, 113867, 298664],\n",
+              "       [     0,      1,  78389, 153773, 299737],\n",
+              "       [     1,      0,  73994, 122782, 303319],\n",
+              "       [     1,      0,  67532, 105751, 304768],\n",
+              "       [     0,      1,  77044,  99281, 140574],\n",
+              "       [     0,      0,  64664, 139553, 137962],\n",
+              "       [     1,      0,  75328, 144135, 134050],\n",
+              "       [     0,      1,  72107, 127864, 353183],\n",
+              "       [     1,      0,  66051, 182645, 118148],\n",
+              "       [     0,      1,  65605, 153032, 107138],\n",
+              "       [     1,      0,  61994, 115641,  91131],\n",
+              "       [     0,      1,  61136, 152701,  88218],\n",
+              "       [     0,      0,  63408, 129219,  46085],\n",
+              "       [     1,      0,  55493, 103057, 214634],\n",
+              "       [     0,      0,  46426, 157693, 210797],\n",
+              "       [     0,      1,  46014,  85047, 205517],\n",
+              "       [     1,      0,  28663, 127056, 201126],\n",
+              "       [     0,      0,  44069,  51283, 197029],\n",
+              "       [     0,      1,  20229,  65947, 185265],\n",
+              "       [     0,      0,  38558,  82982, 174999],\n",
+              "       [     0,      0,  28754, 118546, 172795],\n",
+              "       [     1,      0,  27892,  84710, 164470],\n",
+              "       [     0,      0,  23640,  96189, 148001],\n",
+              "       [     0,      1,  15505, 127382,  35534],\n",
+              "       [     0,      0,  22177, 154806,  28334],\n",
+              "       [     0,      1,   1000, 124153,   1903],\n",
+              "       [     1,      0,   1315, 115816, 297114],\n",
+              "       [     0,      0,      0, 135426,      0],\n",
+              "       [     0,      1,    542,  51743,      0],\n",
+              "       [     0,      0,      0, 116983,  45173]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "markdown",
