--- a/Regresión/Regresion_Lineal_Multiple.ipynb
+++ b/Regresión/Regresion_Lineal_Multiple.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM+hThx+W7I3Ev75Pdk7yVV",
+      "authorship_tag": "ABX9TyPudD+vnOafT8adcb33P6eB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -238,13 +238,32 @@
       "metadata": {
         "id": "tDBqCWkfjVjY",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6ae106ee-bc8f-4216-9e80-f959c735aa5f"
       },
       "source": [
-        "from sklearn.linear_model import LinearRegression\n"
+        "from sklearn.linear_model import LinearRegression\n",
+        "regresion = LinearRegression()\n",
+        "regresion.fit(x_train,y_train)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
     }
   ]
 }
