--- a/Regresión/Regresion_Lineal_Multiple.ipynb
+++ b/Regresión/Regresion_Lineal_Multiple.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMNcqa9OLR5lWC2gfgwGySk",
+      "authorship_tag": "ABX9TyOkFUK6ryc7odu78ybAfpfj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "y_VVpj56uzRV",
         "colab_type": "code",
-        "outputId": "2a38c4ea-1a5c-41f3-f300-895677d38b59",
+        "outputId": "93179813-b76f-46f1-a673-15ba823f3464",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -80,7 +80,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,27 +239,29 @@
         "id": "tDBqCWkfjVjY",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 34
         },
-        "outputId": "0ac77f1b-10dc-48e4-fd64-308efd5596fc"
+        "outputId": "327bca67-fd78-4c91-9d35-f77106bb3f35"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "regresion = LinearRegression()\n",
         "regresion.fit(x_train,y_train)"
       ],
-      "execution_count": 3,
+      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-3c7088ec245f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear_model\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLinearRegression\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mregresion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLinearRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mregresion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'x_train' is not defined"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
         }
       ]
     },
@@ -278,57 +280,22 @@
       "metadata": {
         "id": "geqoQ1nXkviv",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 164
-        },
-        "outputId": "4a35b5e4-9af6-4dcd-fda7-835ffb28959e"
+        "colab": {}
       },
       "source": [
         "y_pred = regresion.predict(x_test)"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-038a44138504>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregresion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'regresion' is not defined"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "w9lowm_rlmWh",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 164
-        },
-        "outputId": "3933134b-49ad-4bd7-fe7b-956d89d04a85"
+        "id": "xC38dF7_nsSH",
+        "colab_type": "text"
       },
       "source": [
-        "y_pred"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-3aaf935e6aec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my_pred\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'y_pred' is not defined"
-          ]
-        }
+        "### Construir el modelo óptimo de RLM utilizando la eliminación hacia átras"
       ]
     }
   ]
