--- a/Regresión/Regresion_Lineal.ipynb
+++ b/Regresión/Regresion_Lineal.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP/KobuglfHS4Tr09K8TK6v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +51,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -70,22 +69,22 @@
       "metadata": {
         "id": "y_VVpj56uzRV",
         "colab_type": "code",
-        "outputId": "f408b8d1-634e-47e9-b5ec-14fb99949841",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
-        }
+        },
+        "outputId": "f77d8e04-6328-4863-82ac-9539580f3a25"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly&response_type=code\n",
             "\n",
             "Enter your authorization code:\n",
             "··········\n",
@@ -117,7 +116,7 @@
         "x = data1.iloc [:,:-1]\n",
         "y = data1.iloc [:,1]"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -138,7 +137,7 @@
         "#x_train = sc_x.fit.transform(x_train)\n",
         "#x_test = sc_x.fit.transform(x_test)"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -167,18 +166,18 @@
       "metadata": {
         "id": "ILktg1Ld8Yuk",
         "colab_type": "code",
-        "outputId": "cfa1f217-ecde-4442-a978-a4c2a311654d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "d7d32e85-ab2b-40d8-de7b-b6670b5d729f"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "regresion = LinearRegression()\n",
         "regresion.fit(x_train,y_train)"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,7 +189,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 14
         }
       ]
     },
@@ -214,7 +213,7 @@
       "source": [
         "y_pred= regresion.predict(x_test)"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -225,6 +224,114 @@
       },
       "source": [
         ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TlwvBUKFbtdX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 359
+        },
+        "outputId": "8086ba50-941a-4cb5-c140-23322fd5dd47"
+      },
+      "source": [
+        "y_pred\n",
+        "pd.DataFrame(y_pred)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>40835.105909</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>123079.399408</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>65134.556261</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>63265.367772</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>115602.645454</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>108125.891499</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>116537.239698</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>64199.962017</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>76349.687193</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>100649.137545</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "               0\n",
+              "0   40835.105909\n",
+              "1  123079.399408\n",
+              "2   65134.556261\n",
+              "3   63265.367772\n",
+              "4  115602.645454\n",
+              "5  108125.891499\n",
+              "6  116537.239698\n",
+              "7   64199.962017\n",
+              "8   76349.687193\n",
+              "9  100649.137545"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
       ]
     },
     {
@@ -242,11 +349,11 @@
       "metadata": {
         "id": "TA306Es2plty",
         "colab_type": "code",
-        "outputId": "10143985-2f3c-4715-89bd-603f1d394424",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "outputId": "10143985-2f3c-4715-89bd-603f1d394424"
       },
       "source": [
         "plt.scatter(x_train, y_train, color=\"red\",alpha=0.5)\n",
@@ -256,7 +363,7 @@
         "plt.ylabel (\"Sueldo $\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -278,11 +385,11 @@
       "metadata": {
         "id": "ZM4tR4LCt8R7",
         "colab_type": "code",
-        "outputId": "b5b482b1-fc5f-4152-c196-7ced9e3ead19",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "outputId": "b5b482b1-fc5f-4152-c196-7ced9e3ead19"
       },
       "source": [
         "plt.scatter(x_test,y_test,color=\"Green\")\n",
@@ -292,7 +399,7 @@
         "plt.ylabel (\"Sueldo $\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
