--- a/Regresión/Regresion_Lineal_Multiple.ipynb
+++ b/Regresión/Regresion_Lineal_Multiple.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOkFUK6ryc7odu78ybAfpfj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +51,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -70,22 +69,26 @@
       "metadata": {
         "id": "y_VVpj56uzRV",
         "colab_type": "code",
-        "outputId": "93179813-b76f-46f1-a673-15ba823f3464",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+          "height": 122
+        },
+        "outputId": "0de2d7ac-c6c8-43bf-dbb9-147a0efd78c9"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -113,7 +116,20 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,4].values"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9HByNNfG68OE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pd.DataFrame(x)"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -143,7 +159,7 @@
         "### remainder='passthrough'. deja el resto de las columnas en pié\n",
         "x=np.array(ct.fit_transform(x),dtype=np.int)"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -154,9 +170,9 @@
         "colab": {}
       },
       "source": [
-        ""
+        "pd.DataFrame(x)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +195,7 @@
       "source": [
         "x = x[:,1:]"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -210,7 +226,7 @@
         "#x_train = sc_x.fit.transform(x_train)\n",
         "#x_test = sc_x.fit.transform(x_test)"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -242,14 +258,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "327bca67-fd78-4c91-9d35-f77106bb3f35"
+        "outputId": "9523d85b-f8d0-4f1c-83b2-ea2053a7a681"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "regresion = LinearRegression()\n",
         "regresion.fit(x_train,y_train)"
       ],
-      "execution_count": 16,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -261,7 +277,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 11
         }
       ]
     },
@@ -285,7 +301,7 @@
       "source": [
         "y_pred = regresion.predict(x_test)"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -297,6 +313,33 @@
       "source": [
         "### Construir el modelo óptimo de RLM utilizando la eliminación hacia átras"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NLcew6kwZg9K",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import statsmodels.formula.api as sm\n",
+        "x = np.append(arr= np.ones((50,1)).astype(int), values= x, axis=1)"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NZ6JB4BBergn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pd.DataFrame(x)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
