--- a/Regresión/Regresion_Lineal_Multiple.ipynb
+++ b/Regresión/Regresion_Lineal_Multiple.ipynb
@@ -137,7 +137,8 @@
       },
       "source": [
         "### Dividir el data set en conjunto de entrenamiento y conjunto de testing\n",
-        "# no dividimos el dataset ya que tenemos solo 10 datos. son muy poquitos."
+        "# no dividimos el dataset ya que tenemos solo 10 datos. son muy poquitos.\n",
+        "# no escalamos los datos ya que la funcion lo tiene inmerso"
       ]
     },
     {
@@ -145,21 +146,42 @@
       "metadata": {
         "id": "xZq1KN4y3NGh",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "640a000e-ede3-4159-f59b-eba6acf6747d"
       },
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
+        "\"\"\" from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.2, random_state=0)\n",
         "\n",
         "# Escalado de variables\n",
         "# en este ejemplo no es necesario lo dejaremos comentariado\n",
-        "#from sklearn.preprocessing import StandardScaler\n",
-        "#sc_x = StandardScaler()\n",
-        "#x_train = sc_x.fit.transform(x_train)\n",
-        "#x_test = sc_x.fit.transform(x_test)"
+        "from sklearn.preprocessing import StandardScaler\n",
+        "sc_x = StandardScaler()\n",
+        "x_train = sc_x.fit.transform(x_train)\n",
+        "x_test = sc_x.fit.transform(x_test)\n",
+        "\"\"\""
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "' from sklearn.model_selection import train_test_split\\nx_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.2, random_state=0)\\n\\n# Escalado de variables\\n# en este ejemplo no es necesario lo dejaremos comentariado\\nfrom sklearn.preprocessing import StandardScaler\\nsc_x = StandardScaler()\\nx_train = sc_x.fit.transform(x_train)\\nx_test = sc_x.fit.transform(x_test)\\n'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
