--- a/Regresión/Regresion_Lineal_Multiple.ipynb
+++ b/Regresión/Regresion_Lineal_Multiple.ipynb
@@ -200,7 +200,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### Ajustar el modelo de Regresión Lineal Múltiple con el conjunto de entrenamiento"
+        "### Ajustar las caracteristicas de la regresion lineal polinómica"
       ]
     },
     {
@@ -208,32 +208,28 @@
       "metadata": {
         "id": "tDBqCWkfjVjY",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "8374bc1f-adce-460c-b3ea-4d66bbffc150"
+        "colab": {}
       },
       "source": [
-        "from sklearn.linear_model import LinearRegression\n",
-        "regresion = LinearRegression()\n",
-        "regresion.fit(x_train,y_train)"
+        "from sklearn.preprocessing import PolynomialFeatures\n",
+        "poly_reg = PolynomialFeatures(degree = 2)\n",
+        "x_poly = poly_reg.fit_transform(x)"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qb1Y9sXwMIcZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pd.DataFrame(x_poly)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 29
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
